Finalize materials for profiling.

--- a/profiling/001-line-profiler.ipynb
+++ b/profiling/001-line-profiler.ipynb
@@ -1,13 +1,31 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:61bd061779d83cc082a7df70896a2b1daf269a22ff240dc2c541b647c7641ff5"
+  "signature": "sha256:384c9a94072d7d1f5d357d96aa0ad6ce584b6f9d3c2f3b8e8406f33a1606947b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Line profiling\n",
+      "\n",
+      "This allows you to time the execution of different parts of your code. \n",
+      "\n",
+      "We will look at a very simple module, stored in the file `fib.py` and profile it with the `%lpruf` magic"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "First, load the ipython extension, to make the magic available:"
+     ]
+    },
     {
      "cell_type": "code",
      "collapsed": false,
@@ -16,17 +34,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The line_profiler extension is already loaded. To reload it, use:\n",
-        "  %reload_ext line_profiler\n"
-       ]
-      }
-     ],
-     "prompt_number": 5
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -37,26 +46,25 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "lprun -f fib.fib fib.main()"
+      "%lprun -f fib.fib fib.fib(10)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 3
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "A pager should open below specifying how many times each line was executed, how long it took to run and what proportion of the time was spent on this line. This tells you what parts of the code are worth investing additional time in refactoring"
+     ]
     }
    ],
    "metadata": {}
